backend basic setup creted

--- a/photography-project/src/index.html
+++ b/photography-project/src/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/src/style.css">
+	<link rel="stylesheet" href="/style.css">
 	<title>Photography</title>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
 <body>
-	<script src="/src/script.js"></script>
+	<script src="/script.js"></script>
 	<div class="hero-section">	
 		<div class="about-text hover-target">about</div>
 		<div class="contact-text hover-target">contact</div>
