add a sample posts

--- a/photography-project/src/index.html
+++ b/photography-project/src/index.html
@@ -34,9 +34,9 @@
 		</div>
 	</div>	
 	
-	<div class="about-section">	
+	<div class="getposts">	
 		<div class="about-close hover-target">
-			hii
+			posts
 		</div>
 		<div class="section-center">
 			<div class="container">
